# math-for-ds

./: pyproject.toml
ch1/: ex1-12_log.py  ex1-13_interest.py  ex1-14_exp_interest.py  ex1-16_limit.py  ex1-18_derivative.py  ex1-21_parital_derivative.py  ex1-22_limit-diff.py  ex1-23_limit-diff2.py  ex1-25_chain.py  ex1-26_app_integral.py  ex1-29_integral.py  ex1-30_limit_integral.py  ex1-7_linear.py  ex1-9_2variable.py  ex1-n1_symsum.py
ch2/: ex2-1_bayes.py  ex2-2.binomial-distribution.py  ex2-3.beta-distribution.py  ex2-4.beta-right-cumul.py  ex2-5.beta-more.py
ch3/: ex3-10_norm.py  ex3-11_cdf.py  ex3-12_ppf.py  ex3-13_rng.py  ex3-14_z_score.py  ex3-2.weight-avg.py  ex3-4_mid.py  ex3-5_mode.py  ex3-6_variance.py  ex3-7_std_dev.py  ex3-8_sample_std_dev.py  ex3-9_normal-pdf.py
