
[tool.poetry]
name = "math-for-ds"
version = "0.1.0"
description = "test code of contents that written Essential Math for Data Science"
authors = ["nolleh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.13.3"
matplotlib = "^3.9.3"
pyqt6 = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
